changed behavior of sidebar to stop before overlapping footer

--- a/source/css/main.css
+++ b/source/css/main.css
@@ -454,6 +454,12 @@ pre{
 	margin: 0px 0 15px 10px;
 	padding-right: 11px;
 	float: left;
+	height: 600px;
+}
+
+.blogSidebarAbsolute{
+	position: absolute;
+	bottom: 0px;
 }
 
 .blogSidebar a{
@@ -1380,6 +1386,10 @@ pre{
 	}
 
 	.blogSidebar{
+		display: none;
+	}
+
+	.blogSidebarReserve{
 		display: none;
 	}
 
